Protect planner test contracts from representational overconstraints
Treat accumulated MinST hard-edge capacity as a semantic lower bound, preserve intentional null FTypes while proving rule reachability, and distinguish generic UCUM from UCUMKPM profile topology.

Constraint: Task 6 is limited to three proven test-contract corrections.

Rejected: Changing planner/runtime behavior | reproduced failures are stale or overly strict test expectations.

Confidence: high

Scope-risk: narrow

Directive: Keep UCUMKPM row-only while allowing supported generic UCUM column profiles.

Tested: targeted and related planner rule/component Maven suites; compile; diff whitespace check.

Not-tested: full rule suite has nine unrelated pre-existing contract failures.